# BMP-Editor

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
src/: create_load.rs  image_actions.rs  main.rs  pixel_actions.rs  pixels.rs  start.rs  tools.rs
