[package]
name = "bmp-editor"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp-rust = "0.2.5"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-console = "0.2.3"
wasm-bindgen = "0.2.83"
gloo-utils = "0.1.5"
gloo = "0.8.0"
web-sys = {version="0.3.60", features=["Element", "HtmlInputElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "Path2d", "Blob", "Url", "HtmlLinkElement"]}
js-sys = "0.3.60"